--- a/src/components/MainHead.css
+++ b/src/components/MainHead.css
@@ -6,7 +6,7 @@
     justify-content: space-between;
     align-items: center;
     height: 3rem;
-    background-color: rgb(248, 248, 248);
+    background-color: #141219;
     box-shadow: 0px 0.2px 2px 0px rgba(0,0,0,0.1);
 }
 .navbar{
@@ -22,6 +22,7 @@
     background-color: rgba(160, 160, 158,0.7);
 }
 .nav-icon{
+
     position: relative;
     z-index: 3;
     width: 1rem;
@@ -32,6 +33,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.nav-icon i{
+    color: white;
 }
 
 
@@ -45,7 +49,7 @@ hr{
     position: absolute;
 z-index: 10;
 
-    background-color: white;
+    background-color: #141219;
     height: 100vh;
     width: 100%;
     max-width: 380px;
@@ -61,7 +65,7 @@ z-index: 10;
 }
 .menu li{
     color: rgb(109, 109, 105);
-    margin: 0.7rem 2rem;
+    margin: 2rem 2rem;
     font-size: 1.1rem;
 }
 .menu a:hover{
@@ -78,12 +82,12 @@ z-index: 10;
     margin-right: 1rem;
 }
 .social-icons{
-    text-align: center
+
 }
 .contrast{
     background-color: rgba(0,0,0,0.4);
     z-index: -1;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     position: absolute;
     left: 0%;
