--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 *{
   margin: 0;
   padding: 0;
-  color: black;
+  color: white;
   text-decoration: none;
   list-style: none;
+  font-family: 'Karla', sans-serif;
+
 }
