--- a/src/components/MainHead.css
+++ b/src/components/MainHead.css
@@ -1,7 +1,8 @@
 .full{
-
-    position: absolute;
+    z-index: 100;
+    position: fixed;
     width: 100%;
+
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -46,7 +47,7 @@ hr{
 }
 
 .menu{
-    position: absolute;
+    position: fixed;
 z-index: 10;
 
     background-color: #141219;
@@ -57,7 +58,7 @@ z-index: 10;
 }
 .menu ul{
     display: flex;
-
+    text-align: left;
     flex-direction: column;
 }
 .menu ul i{
@@ -89,7 +90,8 @@ z-index: 10;
     z-index: -1;
     width: 100%;
     height: 100vh;
-    position: absolute;
+    position: fixed;
+
     left: 0%;
 }
 .bodym{ 
