--- a/src/components/News.css
+++ b/src/components/News.css
@@ -9,39 +9,57 @@
 
     margin: 0 auto;
     display: grid;
-    max-width: 1150px;
+    max-width: 1100px;
     grid-template: auto auto auto auto/1fr;
     gap: 1rem;
-
+    grid-auto-flow: dense
 }
 .grid-item{
     margin: 0 0.5rem;
     font-size: 1.5rem;
     text-align: center;
     position: relative;
+    z-index:-1 ;
 }
 .grid-item img{
     width: 100%;
     margin-bottom: -6px;
+
     
+}
+.related-item{
+    display: flex;
+    justify-content: space-between;
+    text-align: left;
+    
+}
+.wide .related-item img{
+    width: 45%;
+    height: 100%;
+}
+.related-item img{
+    width: 30%;
+    height: 100%;
 }
 .grid-item p{
     color: black;
     text-align: left;
-    font-size: 1rem;    
+    font-size: 1rem;   
+    font-weight: lighter; 
 }
 .grid-item hr{
     margin: 0.4rem auto;
     width: 99%;
-
-    color: lightgrey;
+    border:none;
+    height: 1px;
+    background: rgb(203, 203, 207);
 }
 .grid-item h1{
     text-align: center;
     width: 100%;
     
     color: black;
-    font-size: 2.2rem;
+    font-size: 2.3rem;
 }
 .grid-item h2{
     position: absolute;
@@ -53,14 +71,33 @@
     background: rgba(211, 211, 211, 0.6)
 }
 .grid-item h3{
-    padding: 0.3rem;
+display: flex;
+justify-content: space-between;
     background-color: rgba(223, 220, 217, 0.493);
     font-size: 1rem;
     color: black;
+    text-align: left;
+    height: 2rem;
+    align-items: center;
 }
 
+h3 .icon{
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    margin-left: auto;
+    width: 2rem;
+    float: right;
+    background-color: rgb(180, 180, 180);
 
 
+    text-align: center  
+}
+.grid-item i{
+    color: black;
+
+}
 
 
 
@@ -71,16 +108,18 @@
         position: relative;
     }
     .grid-container{
-        grid-template: 2fr auto auto/1fr 1fr;
+        grid-template: repeat(5,auto)/1fr 1fr;
     
     }
-    .grid-item:nth-child(1){
+    .wide{
 
-        grid-column: 1/span 2;
+        grid-column: span 2;
+        grid-row: span 3;
     }
-    .grid-item:nth-child(4){
-        grid-row: 2/span 2;
-        grid-column: 2/span 1;
+    .related{
+
+        grid-row: 4/span 2;
+        grid-column: span 1;
     }
 }
 @media only screen and (min-width: 1000px){
@@ -89,16 +128,20 @@
         position: relative;
     }
     .grid-container{
-        grid-template: 1fr 1fr/ 1.5fr 1fr 1fr;
+        grid-template: auto auto/ repeat(7,1fr);
 
     }
-    .grid-item:nth-child(1){
-        grid-column: 1/span 1;
+    .grid-item{
+        grid-column: span 2;
+
+    }
+    .wide{
+        grid-column: span 3;
         grid-row: 1/span 2;
     }
-    .grid-item:nth-child(4){
+    .related{
         grid-row: 1/span 2;
-        grid-column: 3/span 1;
+        
     }
     
 }
