--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   color: white;
   text-decoration: none;
   list-style: none;
-  font-family: 'Karla', sans-serif;
+  font-family: 'Assistant', sans-serif;
+
 
 }
