--- a/src/components/MainHead.css
+++ b/src/components/MainHead.css
@@ -2,7 +2,6 @@
     z-index: 100;
     position: fixed;
     width: 100%;
-
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -20,7 +19,7 @@
 
 .nav-icon:hover{
     cursor: pointer;
-    background-color: rgba(160, 160, 158,0.7);
+    
 }
 .nav-icon{
 
@@ -36,7 +35,7 @@
     align-items: center;
 }
 .nav-icon i{
-    color: white;
+    color: rgb(165, 165, 165);
 }
 
 
@@ -48,13 +47,17 @@ hr{
 
 .menu{
     position: fixed;
-z-index: 10;
-
+    z-index: 10;
+    box-sizing: content-box;
     background-color: #141219;
     height: 100vh;
     width: 100%;
     max-width: 380px;
     border-right: 0.3px solid grey;
+    overflow-y: scroll;
+}
+.menu::-webkit-scrollbar { 
+    display: none; 
 }
 .menu ul{
     display: flex;
@@ -62,11 +65,11 @@ z-index: 10;
     flex-direction: column;
 }
 .menu ul i{
-    font-size: 2rem;
+    font-size: 1.6rem;
 }
 .menu li{
     color: rgb(109, 109, 105);
-    margin: 2rem 2rem;
+    margin: 1.6rem 2rem;
     font-size: 1.1rem;
 }
 .menu a:hover{
@@ -82,9 +85,6 @@ z-index: 10;
     font-size: 1.3rem;
     margin-right: 1rem;
 }
-.social-icons{
-
-}
 .contrast{
     background-color: rgba(0,0,0,0.4);
     z-index: -1;
@@ -93,6 +93,4 @@ z-index: 10;
     position: fixed;
 
     left: 0%;
-}
-.bodym{ 
 }
